src/objects/MUSW__Master_Submission_List__c.object
<CustomObject>
    <description>Master control table to determine which Permit, License, etc values will set or create Submission outcomes via DRE rules. Can be used to allow non-admin users with appropriate permissions to edit their own criteria and outcome values.</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( AND(Effective_Start_Date__c&lt;TODAY(),
       (OR(ISBLANK(Effective_End_Date__c),
	       Effective_End_Date__c&gt; TODAY())
		) 
		),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <description>This refers to the application method being applied for- General Application, Examination, etc.</description>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This refers to the application type being applied for: Application Types- Trades Credential, Plan Review, Permit To Operate, etc.</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BG_File_Location_Type__c</fullName>
        <label>BG File Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>Bluebeam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_Question_Field_API_Name__c</fullName>
        <description>Field to store field API name for background question</description>
        <label>Background Question Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <description>List of license types</description>
        <label>Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <description>This refers to the credential being applied for</description>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates submission list entries that are always required and will be defaulted to the Portal.</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_Long__c</fullName>
        <label>Description Long</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Submission List record description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_API_Name__c</fullName>
        <description>API name of the document record. This file will be provided as a hyperlink to the user to download from the submission.</description>
        <label>Document API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Answer__c</fullName>
        <description>Expected Answer for the question based on which submission list will be generated</description>
        <label>Expected Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Unique record identifier</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id_of_Question__c</fullName>
        <description>Question__r.External_Id_of_Parent__c</description>
        <formula>Question__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Id of Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Upload_button_in_backend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Submission List Hide Upload button in backend</description>
        <label>Hide Upload button in backend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>License Type</description>
        <label>License Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_establishment_or_branch__c</fullName>
        <label>Name of establishment or branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object associated with submission list record</description>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Object</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <description>This refers to the permit type being applied for as defined by the program area</description>
        <label>Permit Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Program_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <description>This refers to the program area being applied for as defined by the application type</description>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Program_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Question based on which submission list record will be created</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Master Submission Lists</relationshipLabel>
        <relationshipName>Master_Submission_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>RecordType.Name</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Name</fullName>
                </value>
                <value>
                    <fullName>Withdraw Application</fullName>
                </value>
                <value>
                    <fullName>Submit Additional Documentation</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes Title Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <label>Service Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Request_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_For__c</fullName>
        <description>Submission list record show for</description>
        <label>Show For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Show_For</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Type__c</fullName>
        <description>This field indicates whether an applicant/licensee should upload a hardcopy or softcopy submission, or whether the document is Board Action and should appear in the license lookup.</description>
        <label>Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Submission_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Subtype</description>
        <label>Subtype</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UBI_Number__c</fullName>
        <label>UBI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Group__c</fullName>
        <description>Use Group</description>
        <label>Use Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Use_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <description>Work Type</description>
        <label>Work Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Work_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Master Submission List</label>
    <listViews>
        <fullName>Delegated_Municipality</fullName>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Object__c</columns>
        <columns>Show_For__c</columns>
        <columns>Document_API_Name__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Delegated Municipality Agent</value>
        </filters>
        <label>Delegated Municipality</label>
    </listViews>
    <listViews>
        <fullName>Embalmer_Submissions</fullName>
        <columns>NAME</columns>
        <columns>Application_Method__c</columns>
        <columns>Question__c</columns>
        <columns>Title__c</columns>
        <columns>Expected_Answer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Funerals</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Embalmer</value>
        </filters>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Embalmer</value>
        </filters>
        <label>Embalmer Submissions</label>
    </listViews>
    <listViews>
        <fullName>MH_Credential_Installer</fullName>
        <columns>NAME</columns>
        <columns>Show_For__c</columns>
        <columns>Active__c</columns>
        <columns>Application_Method__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Manufactured Homes Installer</value>
        </filters>
        <label>MH Credential Installer</label>
    </listViews>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>Object__c</columns>
        <columns>Show_For__c</columns>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Application_Method__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Credential__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Required__c</columns>
        <columns>Subtype__c</columns>
        <columns>Active__c</columns>
        <columns>Default__c</columns>
        <columns>License_Type__c</columns>
        <columns>Permit_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>POWTS_Consultation</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS Consultation</value>
        </filters>
        <label>POWTS Consultation</label>
    </listViews>
    <listViews>
        <fullName>POWTS_Sanitary_Permit</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS Sanitary Permit</value>
        </filters>
        <label>POWTS Sanitary Permit</label>
    </listViews>
    <listViews>
        <fullName>POWTS_Soil_Saturation_Determination</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS Soil Saturation Determination</value>
        </filters>
        <label>POWTS Soil Saturation Determination</label>
    </listViews>
    <listViews>
        <fullName>POWTS_component_manual_design</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS Component Manual Design</value>
        </filters>
        <label>POWTS component manual design</label>
    </listViews>
    <listViews>
        <fullName>POWTS_miscellaneous_review</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS Miscellaneous Review</value>
        </filters>
        <label>POWTS miscellaneous review</label>
    </listViews>
    <listViews>
        <fullName>POWTS_submissions_1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Application_Method__c</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>Object__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <label>POWTS submissions</label>
    </listViews>
    <listViews>
        <fullName>POWTS_submissions_CM_Review</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS Component Manual Review</value>
        </filters>
        <label>POWTS submissions - CM Review</label>
    </listViews>
    <listViews>
        <fullName>POWTS_submissions_experimental_system2</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS Experimental System</value>
        </filters>
        <label>POWTS submissions - experimental system</label>
    </listViews>
    <listViews>
        <fullName>POWTS_submissions_individual_site</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS Individual Site Design</value>
        </filters>
        <label>POWTS submissions - individual site</label>
    </listViews>
    <listViews>
        <fullName>POWTS_submissions_petition_4_var</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS Petition for Variance</value>
        </filters>
        <label>POWTS submission - petition for variance</label>
    </listViews>
    <listViews>
        <fullName>POWTS_submissions_state_owned_privies</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Permit_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>POWTS State-Owned Privy Registration</value>
        </filters>
        <label>POWTS submissions - state owned privies</label>
    </listViews>
    <nameField>
        <label>Master Submission List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Submission Lists</pluralLabel>
    <recordTypes>
        <fullName>Course_Information</fullName>
        <active>true</active>
        <label>Course Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>License</fullName>
        <active>true</active>
        <description>License Submissions</description>
        <label>License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permit</fullName>
        <active>true</active>
        <description>Permit Submissions</description>
        <label>Permit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>